amendments made to adding for main content

--- a/dinner-recipes.html
+++ b/dinner-recipes.html
@@ -25,9 +25,9 @@
         <nav>
             <ul class="navigation-bar" id="navigation-bar">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="breakfast-recipies.html">Breakfast</a></li>
-                <li><a href="lunch-recipies.html">Lunch</a></li>
-                <li><a href="dinner-recipies.html" class="active">Dinner</a></li>
+                <li><a href="breakfast-recipes.html">Breakfast</a></li>
+                <li><a href="lunch-recipes.html">Lunch</a></li>
+                <li><a href="dinner-recipes.html" class="active">Dinner</a></li>
             </ul>
         </nav>
     </header>
@@ -37,7 +37,7 @@
         <section class="hero-image2">
             <!-- Cover Text -->
             <div class="cover-text">
-                <h2>Why not try out our range of delicious lunch recipies!</h2>
+                <h2>Why not try out our range of delicious lunch recipes!</h2>
             </div>
         </section>
         <!-- Main Content Container-->
@@ -54,7 +54,7 @@
                 <h2 class="content-bottom"></h2>
             </section>
             <!-- Dinner Recipe Container-->
-            <div class="dinner-recipies">
+            <div class="dinner-recipes">
                 <div class="dinner-container" id="dinner-row">
                     <!-- Pesto Gnocchi Contsiner -->
                     <aside class="pesto-gnocchi" id="recipe-item">
