--- a/lunch-recipes.html
+++ b/lunch-recipes.html
@@ -25,9 +25,9 @@
         <nav>
             <ul class="navigation-bar" id="navigation-bar">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="breakfast-recipies.html">Breakfast</a></li>
-                <li><a href="lunch-recipies.html" class="active">Lunch</a></li>
-                <li><a href="dinner-recipies.html">Dinner</a></li>
+                <li><a href="breakfast-recipes.html">Breakfast</a></li>
+                <li><a href="lunch-recipes.html" class="active">Lunch</a></li>
+                <li><a href="dinner-recipes.html">Dinner</a></li>
             </ul>
         </nav>
     </header>
@@ -37,7 +37,7 @@
         <section class="hero-image2">
             <!-- Cover Text -->
             <div class="cover-text">
-                <h2>Why not try out our range of delicious lunch recipies!</h2>
+                <h2>Why not try out our range of delicious lunch recipes!</h2>
             </div>
         </section>
         <!-- Main Content Container -->
@@ -55,7 +55,7 @@
                 <h2 class="content-bottom"></h2>
             </section>
             <!-- Lunch Recipe Container -->
-            <div class="lunch-recipies">
+            <div class="lunch-recipes">
                 <div class="lunch-container" id="lunch-row">
                     <!-- Caesar Salad Container -->
                     <aside class="caesar-salad" id="recipe-item">
