--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <nav>
             <ul class="navigation-bar" id="navigation-bar">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="breakfast-recipies.html">Breakfast</a></li>
-                <li><a href="lunch-recipies.html">Lunch</a></li>
-                <li><a href="dinner-recipies.html">Dinner</a></li>
+                <li><a href="breakfast-recipes.html">Breakfast</a></li>
+                <li><a href="lunch-recipes.html">Lunch</a></li>
+                <li><a href="dinner-recipes.html">Dinner</a></li>
             </ul>
         </nav>
     </header>
