added aria labels to all pages

--- a/dinner-recipes.html
+++ b/dinner-recipes.html
@@ -24,10 +24,10 @@
         <!-- Navigation Menu -->
         <nav>
             <ul class="navigation-bar" id="navigation-bar">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="breakfast-recipes.html">Breakfast</a></li>
-                <li><a href="lunch-recipes.html">Lunch</a></li>
-                <li><a href="dinner-recipes.html" class="active">Dinner</a></li>
+                <li><a href="index.html" aria-label="Go to the home page">Home</a></li>
+                <li><a href="breakfast-recipes.html" aria-label="Visit the breakfast recipe page">Breakfast</a></li>
+                <li><a href="lunch-recipes.html" aria-label="Visit the lunch recipe page">Lunch</a></li>
+                <li><a href="dinner-recipes.html" aria-label="Currently visiting the dinner recipes page" class="active">Dinner</a></li>
             </ul>
         </nav>
     </header>
@@ -44,12 +44,11 @@
         <div class="main-content" id="main-content">
             <section class="section-one">
                 <!-- Section Heading -->
-                <h2>Section</h2>
+                <h2>Dinner Recipes</h2>
                 <!-- Section Content -->
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam reiciendis praesentium porro
-                    accusantium, veritatis dolore quos tenetur ut, debitis in ducimus earum maiores dicta similique
-                    vel
-                    temporibus facere error nisi!</p>
+                <p>Hello and welcome to Healthy Cooking Made Simple! In this page you find a variety of quick and easy
+                    Dinner meals to help you start your day a little bit better, and they only get easier each time
+                    you make them.</p>
                     <!-- Border for bottom of section -->
                 <h2 class="content-bottom"></h2>
             </section>
@@ -389,11 +388,11 @@
     <footer>
         <!-- Social Media Links -->
         <ul id="social-media-links">
-            <li class="social-media"><a href="https://www.instagram.com" target="_blank"><i
+            <li class="social-media"><a href="https://www.instagram.com" target="_blank" aria-label="Visit our instagram page - opens in a new tab"><i
                         class="fa-brands fa-instagram"></i></a></li>
-            <li class="social-media"><a href="https://www.twitter.com" target="_blank"><i
+            <li class="social-media"><a href="https://www.twitter.com" target="_blank" aria-label="Visit our twitter page - opens in a new tab"><i
                         class="fa-brands fa-x-twitter"></i></a></li>
-            <li class="social-media"><a href="https://www.facebook.com" target="_blank"><i
+            <li class="social-media"><a href="https://www.facebook.com" target="_blank" aria-label="Visit our facebook page - opens in a new tab"><i
                         class="fa-brands fa-facebook"></i></a></li>
         </ul>
     </footer>
