--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <!-- Navigation Menu -->
         <nav>
             <ul class="navigation-bar" id="navigation-bar">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="breakfast-recipes.html">Breakfast</a></li>
-                <li><a href="lunch-recipes.html">Lunch</a></li>
-                <li><a href="dinner-recipes.html">Dinner</a></li>
+                <li><a href="index.html" class="active" aria-label="Currently visiting the home page">Home</a></li>
+                <li><a href="breakfast-recipes.html" aria-label="Visit the breakfast recipe page">Breakfast</a></li>
+                <li><a href="lunch-recipes.html" aria-label="Visit the lunch recipe page">Lunch</a></li>
+                <li><a href="dinner-recipes.html" aria-label="Visit the dinner recipe page" >Dinner</a></li>
             </ul>
         </nav>
     </header>
@@ -165,11 +165,11 @@
     <footer>
         <!-- Social Media Links -->
         <ul id="social-media-links">
-            <li class="social-media"><a href="https://www.instagram.com" target="_blank"><i
+            <li class="social-media"><a href="https://www.instagram.com" target="_blank" aria-label="Visit our instagram page - opens in a new tab"><i
                         class="fa-brands fa-instagram"></i></a></li>
-            <li class="social-media"><a href="https://www.twitter.com" target="_blank"><i
+            <li class="social-media"><a href="https://www.twitter.com" target="_blank" aria-label="Visit our twitter page - opens in a new tab"><i
                         class="fa-brands fa-x-twitter"></i></a></li>
-            <li class="social-media"><a href="https://www.facebook.com" target="_blank"><i
+            <li class="social-media"><a href="https://www.facebook.com" target="_blank" aria-label="Visit our facebook page - opens in a new tab"><i
                         class="fa-brands fa-facebook"></i></a></li>
         </ul>
     </footer>
