--- a/lunch-recipes.html
+++ b/lunch-recipes.html
@@ -15,7 +15,7 @@
     <!-- Header -->
     <header>
         <!-- Page Logo and Main Heading -->
-        <a href="index.html" id="title-logo">
+        <a href="index.html" id="title-logo" aria-label="Healthy cooking made simple!">
             <h1>Healthy Cooking Made Simple!</h1>
         </a>
         <!-- Toggle for Navigation - Hamburger Icon-->
@@ -24,10 +24,10 @@
         <!-- Navigation Menu -->
         <nav>
             <ul class="navigation-bar" id="navigation-bar">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="breakfast-recipes.html">Breakfast</a></li>
-                <li><a href="lunch-recipes.html" class="active">Lunch</a></li>
-                <li><a href="dinner-recipes.html">Dinner</a></li>
+                <li><a href="index.html" aria-label="Go to the home page">Home</a></li>
+                <li><a href="breakfast-recipes.html" aria-label="Visit the breakfast recipe page">Breakfast</a></li>
+                <li><a href="lunch-recipes.html" aria-label="Currently visiting the lunch recipes page" class="active">Lunch</a></li>
+                <li><a href="dinner-recipes.html" aria-label="Visit the dinner recipes page">Dinner</a></li>
             </ul>
         </nav>
     </header>
@@ -45,12 +45,11 @@
             <!-- Section for Flexbox-->
             <section class="section-one">
                 <!-- Section Heading -->
-                <h2>Section</h2>
+                <h2>Lunch</h2>
                 <!-- Section Content -->
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam reiciendis praesentium porro
-                    accusantium, veritatis dolore quos tenetur ut, debitis in ducimus earum maiores dicta similique
-                    vel
-                    temporibus facere error nisi!</p>
+                <p>Hello and welcome to Healthy Cooking Made Simple! In this page you find a variety of quick and easy
+                    lunch meals to help you start your day a little bit better, and they only get easier each time
+                    you make them.</p>
                 <!-- Bottom Border of section -->
                 <h2 class="content-bottom"></h2>
             </section>
@@ -355,11 +354,11 @@
     <footer>
         <!-- Social Media Links -->
         <ul id="social-media-links">
-            <li class="social-media"><a href="https://www.instagram.com" target="_blank"><i
+            <li class="social-media"><a href="https://www.instagram.com" target="_blank" aria-label="Visit our instagram page - opens in a new tab"><i
                         class="fa-brands fa-instagram"></i></a></li>
-            <li class="social-media"><a href="https://www.twitter.com" target="_blank"><i
+            <li class="social-media"><a href="https://www.twitter.com" target="_blank" aria-label="Visit our twitter page - opens in a new tab"><i
                         class="fa-brands fa-x-twitter"></i></a></li>
-            <li class="social-media"><a href="https://www.facebook.com" target="_blank"><i
+            <li class="social-media"><a href="https://www.facebook.com" target="_blank" aria-label="Visit our facebook page - opens in a new tab"><i
                         class="fa-brands fa-facebook"></i></a></li>
         </ul>
     </footer>
