meta tags added to all pages

--- a/dinner-recipes.html
+++ b/dinner-recipes.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="description" content="healthy cooking made simple">
+    <meta name="keywords" content="healthy dinner meals, dinner recipes, healthy eating">
     <script src="https://kit.fontawesome.com/9126144eb8.js" crossorigin="anonymous"></script>
     <!-- Page Title -->
     <title>Healthy Cooking Made Simple!</title>
