image names changed and favicon added

--- a/breakfast-recipes.html
+++ b/breakfast-recipes.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
     <meta name="description" content="healthy cooking made simple">
     <meta name="keywords" content="healthy breakfast meals, breakfast recipes, healthy eating">
     <script src="https://kit.fontawesome.com/9126144eb8.js" crossorigin="anonymous"></script>
@@ -63,7 +64,7 @@
                         <!-- Recipe Heading -->
                         <h2>Banana and Banana Pancakes</h2>
                         <!-- Meal Image -->
-                        <img src=".//assets/images/banana_pancakes_62919_16x9.jpg"
+                        <img src=".//assets/images/banana-pancakes.jpg"
                             alt="An image of a plate full of banana pancakes.">
                         <!-- Image Caption -->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
@@ -124,7 +125,7 @@
                         <!-- Recipe Title -->
                         <h2>Fried bacon with poached egg and tomatoes</h2>
                         <!-- Meal Image -->
-                        <img src="./assets/images/pan-fried_bacon_with_76907_16x9.jpg"
+                        <img src="./assets/images/pan-fried-bacon-with-eggs.jpg"
                             alt="An image of a place with eggs and bacon on it.">
                         <!-- Image Caption-->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
@@ -192,7 +193,7 @@
                         <!-- Recipe Heading -->
                         <h2>Blueberry Overnight Oats</h2>
                         <!-- Meal Image -->
-                        <img src="./assets/images/overnight_muesli_with_57876_16x9.jpg"
+                        <img src="./assets/images/overnight-muesli.jpg"
                             alt="An image of bowl containing overnight oats.">
                         <!-- Image Caption -->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
@@ -238,7 +239,7 @@
                         <!-- Recipe Heading -->
                         <h2>All-day breakfast frittata</h2>
                         <!-- Meal Image-->
-                        <img src="./assets/images/all-day_breakfast_12416_16x9.jpg"
+                        <img src="./assets/images/all-day-breakfast.jpg"
                             alt="An image of plate of a breakfast frittata.">
                         <!-- Image Caption-->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
@@ -323,7 +324,7 @@
                         <!-- Recipe Heading -->
                         <h2>Blueberry Ricotta Pot</h2>
                         <!-- Meal Image -->
-                        <img src="./assets/images/ricotta_pots_with_13643_16x9.jpg"
+                        <img src="./assets/images/ricotta-pots.jpg"
                             alt="An image of blueberry ricotta pot.">
                         <!-- Image Caption -->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
@@ -377,7 +378,7 @@
                         <!-- Recipe Heading -->
                         <h2>Breakfast Quesadillas (V)</h2>
                         <!-- Meal Image -->
-                        <img src="./assets/images/breakfast_quesadillas_82028_16x9.jpg"
+                        <img src="./assets/images/breakfast-quesadillas.jpg"
                             alt="An image of a breakfast quesadilla on a cutting board.">
                         <!-- Image Caption -->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
