--- a/dinner-recipes.html
+++ b/dinner-recipes.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
     <meta name="description" content="healthy cooking made simple">
     <meta name="keywords" content="healthy dinner meals, dinner recipes, healthy eating">
     <script src="https://kit.fontawesome.com/9126144eb8.js" crossorigin="anonymous"></script>
@@ -62,7 +63,7 @@
                         <!-- Recipe Heading -->
                         <h2>Gnocchi with crispy bacon and spinach pesto</h2>
                         <!-- Meal Image -->
-                        <img src="./assets/images/gnocchi_with_crispy_19660_16x9.jpg" alt="">
+                        <img src="./assets/images/gnocchi-with-crispy.jpg" alt="">
                         <!-- Image Caption -->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                         <!-- Input Element for Expand/Hide Button -->
@@ -113,7 +114,7 @@
                         <!-- Recipe Title -->
                         <h2>Chilli Bean Stir-Fry</h2>
                         <!-- Meal Image -->
-                        <img src="./assets/images/chilli_bean_stir-fry_19412_16x9.jpg"
+                        <img src="./assets/images/chilli-bean-stir-fry.jpg"
                             alt="An image of a bowl of Chilli Bean Stir-Fry.">
                         <!-- Image Caption-->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
@@ -168,7 +169,7 @@
                         <!-- Recipe Title-->
                         <h2>Kimchi Fried Rice</h2>
                         <!-- Meal Image -->
-                        <img src="./assets/images/kimchi_fried_rice_03887_16x9.jpg"
+                        <img src="./assets/images/kimchi-fried-rice.jpg"
                             alt="An image of a bowl of Kimchi Fried Rice.">
                         <!-- Image Caption-->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
@@ -234,7 +235,7 @@
                         <!-- Recipe Title -->
                         <h2>Air fryer sausage bake</h2>
                         <!-- Meal Image -->
-                        <img src="./assets/images/air_fryer_sausage_bake_35909_16x9.jpg"
+                        <img src="./assets/images/air-fryer-sausage-bake.jpg"
                             alt="An image of a cutting board with sausage bake on it.">
                         <!-- Image Caption-->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
@@ -287,7 +288,7 @@
                         <!-- Recipe Heading -->
                         <h2>Spaghetti with broccoli pesto</h2>
                         <!-- Meal Image -->
-                        <img src="./assets/images/spaghetti_with_broccoli_82791_16x9.jpg"
+                        <img src="./assets/images/spaghetti-with-broccoli.jpg"
                             alt="An image og a bowl of Broccoli and Pesto Spaghetti.">
                         <!-- Image Caption -->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
@@ -337,7 +338,7 @@
                         <!-- Recipe Heading -->
                         <h2>Korean-style crispy vegetable pancakes</h2>
                         <!-- Meal Image-->
-                        <img src="./assets/images/yachaejeon_korean_crispy_55746_16x9.jpg"
+                        <img src="./assets/images/korean-crispy.jpg"
                             alt="An image of a plate of Korean Pancakes.">
                         <!-- Image Caption-->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption> 
