--- a/lunch-recipes.html
+++ b/lunch-recipes.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
     <meta name="description" content="healthy cooking made simple">
     <meta name="keywords" content="healthy lunch meals, lunch recipes, healthy eating">
     <script src="https://kit.fontawesome.com/9126144eb8.js" crossorigin="anonymous"></script>
@@ -63,7 +64,7 @@
                         <!-- Recipe Heading -->
                         <h2>Caesar Salad</h2>
                         <!-- Meal Image -->
-                        <img src="./assets/images/easy_caesar_salad_64317_16x9.jpg"
+                        <img src="./assets/images/easy-caesar-salad.jpg"
                             alt="An image of a plate with a caesar salad on it.">
                         <!-- Image Caption -->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
@@ -118,7 +119,7 @@
                         <!-- Recipe Title -->
                         <h2>Halloumi Wrap</h2>
                         <!-- Meal Image -->
-                        <img src="./assets/images/easy_halloumi_wrap_57379_16x9.jpg"
+                        <img src="./assets/images/easy-halloumi-wrap.jpg"
                             alt="An image of a plate with a halloumi wrap on it.">
                         <!-- Image Caption -->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
@@ -172,7 +173,7 @@
                         <!-- Recipe Heading -->
                         <h2>Tuna Bean Salad</h2>
                         <!-- Meal Image -->
-                        <img src="./assets/images/tuna_bean_salad_54783_16x9.jpg"
+                        <img src="./assets/images/tuna-bean-salad.jpg"
                             alt="An image of two plated with tuna bean salad on them.">
                         <!-- Image Caption -->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
@@ -226,7 +227,7 @@
                         <!-- Recipe Heading -->
                         <h2>Pizza on Toast</h2>
                         <!-- Meal Image-->
-                        <img src="./assets/images/pizza_on_toast_09337_16x9.jpg" alt="An oven tray of pizza on toast.">
+                        <img src="./assets/images/pizza-on-toast.jpg" alt="An oven tray of pizza on toast.">
                         <!-- Image Caption-->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                         <!-- Input Element for Expand/Hide Button -->
@@ -265,7 +266,7 @@
                         <!-- Recipe Heading -->
                         <h2>Cheese, Tomato and pesto toastie</h2>
                         <!-- Meal Image -->
-                        <img src="./assets/images/cheese_tomato_and_pesto_42396_16x9.jpg"
+                        <img src="./assets/images/cheese-tomato-and-pesto.jpg"
                             alt="An image of a place with a cheese, tomato and pesto toatie on it.">
                         <!-- Image Caption -->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
@@ -307,7 +308,7 @@
                         <!-- Recipe Heading -->
                         <h2>Vegan Noodle Soup (VE)</h2>
                         <!-- Meal Image -->
-                        <img src="./assets/images/vegan_noodle_soup_84779_16x9.jpg"
+                        <img src="./assets/images/vegan-noodle-soup.jpg"
                             alt="An image of a bowl of vegan noodle soup.">
                         <!-- Image Caption -->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
