--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
     <meta name="description" content="healthy cooking made simple">
     <meta name="keywords" content="healthy cooking, recipe website, healthy eating">
     <script src="https://kit.fontawesome.com/9126144eb8.js" crossorigin="anonymous"></script>
@@ -72,7 +73,7 @@
                     <!-- Top Tips Image -->
                     <div class="top-tips-image">
                         <aside class="aside-image">
-                            <img src="assets/images/ba-basics-pans-knives-spoons-tools.jpeg"
+                            <img src="assets/images/pots-and-pans-index.jpeg"
                                 alt="cutting board with cooking equipment on it.">
                         </aside>
                         <!-- Top Tips Section-->
@@ -104,13 +105,13 @@
                                             <!-- Label and input for the readers forname -->
                                             <tr>
                                                 <td><label class="sign-up-label">Foreame:</label></td>
-                                                <td><input type="text" class="bars" id="first-name" name="first-name"
+                                                <td><input type="text" pattern=".*\S+.*" title="This field is required" class="bars" id="first-name" name="first-name"
                                                         placeholder="Forename"></td>
                                             </tr>
                                             <!-- Label and input for the readers surname -->
                                             <tr>
                                                 <td><label class="sign-up-label">Surname:</label></td>
-                                                <td><input type="text" class="bars" id="surname" name="surname"
+                                                <td><input type="text" pattern=".*\S+.*" title="This field is required" class="bars" id="surname" name="surname"
                                                         placeholder="Surname"></td>
                                             </tr>
                                             <!-- Label and input for the readers email -->
