credits added to readme

--- a/breakfast-recipes.html
+++ b/breakfast-recipes.html
@@ -32,6 +32,7 @@
                 <li><a href="breakfast-recipes.html" class="active" aria-label="Currently visiting the breakfast recipe page">Breakfast</a></li>
                 <li><a href="lunch-recipes.html" aria-label="Visit the lunch recipe page">Lunch</a></li>
                 <li><a href="dinner-recipes.html" aria-label="Visit the dinner recipe page" >Dinner</a></li>
+                <li><a href="about.html" aria-label="Visit the about page">About</a></li>
             </ul>
         </nav>
     </header>
