--- a/dinner-recipes.html
+++ b/dinner-recipes.html
@@ -31,6 +31,7 @@
                 <li><a href="breakfast-recipes.html" aria-label="Visit the breakfast recipe page">Breakfast</a></li>
                 <li><a href="lunch-recipes.html" aria-label="Visit the lunch recipe page">Lunch</a></li>
                 <li><a href="dinner-recipes.html" aria-label="Currently visiting the dinner recipes page" class="active">Dinner</a></li>
+                <li><a href="about.html" aria-label="Visit the about page">About</a></li>
             </ul>
         </nav>
     </header>
