--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <li><a href="breakfast-recipes.html" aria-label="Visit the breakfast recipe page">Breakfast</a></li>
                 <li><a href="lunch-recipes.html" aria-label="Visit the lunch recipe page">Lunch</a></li>
                 <li><a href="dinner-recipes.html" aria-label="Visit the dinner recipe page" >Dinner</a></li>
+                <li><a href="about.html" aria-label="Visit out about page">About</a></li>
             </ul>
         </nav>
     </header>
