added page for when you sign up to newsletter

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <section class="newsletter-form">
                     <h2 id="sign-up-heading">Sign up to our newsletter!</h2>
                     <!-- Action Link sourced from Code Institute-->
-                    <form method="POST" action="https://formdump.codeinstitute.net" id="newsletter-form">
+                    <form target="_blank" method="get" action="./signed-up.html" id="newsletter-form">
                         <p>Why not sign up to our newsletter for updates on the latest recipes being added to our site,
                             we'll also offer tips and tricks to make the cooking process easier and the occasional give
                             away for cooking equipment and devices.</p>
