bugs section added to readme file

--- a/about.html
+++ b/about.html
@@ -38,7 +38,9 @@
     <!-- Main -->
     <main>
         <!-- Hero Image -->
-        <section class="hero-image">
+         <h1>
+            <section class="hero-image"></section>
+         </h1>
             <!-- Cover Text Section -->
         </section>
         <!-- Container for main contenet below the hero image -->
