amendments made to filepath or favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
     <meta name="description" content="healthy cooking made simple">
     <meta name="keywords" content="healthy cooking, recipe website, healthy eating">
     <script src="https://kit.fontawesome.com/9126144eb8.js" crossorigin="anonymous"></script>
